# b9s

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLEANED_UP_PROMPTS_USED_TO_CREATE_PROJECT.md  GOLANG_BEST_PRACTICES.md  PLAN_FOR_ADVANCED_OPTIMIZATIONS_ROUND_1__GPT.md  PLAN_FOR_ADVANCED_OPTIMIZATIONS_ROUND_1__OPUS.md  README.md  SKILL.md  TOON_INTEGRATION_BRIEF.md  codecov.yml  coverage_report.txt  go.mod  go.sum  install.ps1  install.sh
.beads/: .gitignore  beads.left.jsonl  beads.left.meta.json  issues.jsonl  tree-state.json
.github/workflows/: ci.yml  release.yml
benchmarks/: baseline_20260106_152724.txt  baseline_round1_20260109_221659.txt  post_pooling_benchmarks.txt  profile_comparison.txt
bv-graph-wasm/: Cargo.toml
bv-graph-wasm/src/: graph.rs
bv-graph-wasm/src/algorithms/: articulation.rs  coverage.rs  mod.rs  subgraph.rs
cmd/bv/: main.go  main_test.go
cmd/bw/: main.go
docs/: ARCHITECTURE.md  ROBOT_MODE.md  USER_GUIDE.md  beads_viewer-vs-beads.md  k9s-inspired-design.md  llm-assisted-issue-management-research.md  spec-keybinding-revert.md  tui-design-research-2025-2026.md
docs/plans/: 2025-02-11-tree-view-split-design.md
pkg/agents/: blurb.go  blurb_test.go  tty_guard.go  tty_guard_test.go
pkg/analysis/: advanced_insights.go  advanced_insights_test.go  betweenness_approx.go  betweenness_approx_test.go  label_health.go  label_suggest_test.go  priority.go  risk.go  risk_test.go  suggest_all_test.go
pkg/config/: config.go  config_test.go  discover.go  discover_test.go
scripts/: coverage.sh  test_buffer_pooling_e2e.sh  test_toon_e2e.sh
(+83 files in other folders)
