[package]
name = "bv-graph-wasm"
version = "0.1.0"
edition = "2021"
authors = ["bv contributors"]
description = "High-performance graph algorithms for bv static viewer"
repository = "https://github.com/Dicklesworthstone/b9s"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "core"]

# Core algorithms used by the viewer (required)
core = []

# Optional algorithms that can be excluded to reduce bundle size
eigenvector = []    # Eigenvector centrality (~2KB)
kcore = []          # K-core decomposition (~1KB)
slack = []          # Slack/float calculations (~1KB)
hits = []           # HITS algorithm (~2KB)
reachability = []   # Reachability queries (~1KB)

# Include all algorithms
full = ["core", "eigenvector", "kcore", "slack", "hits", "reachability"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size - critical for WASM bundles
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
